--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>智能印章管理流程</title>
+  <script>
+    !function(n){
+    var  e=n.document,
+         t=e.documentElement,
+         i=720,
+         d=i/100,
+         o="orientationchange"in n?"orientationchange":"resize",
+         a=function(){
+             var n=t.clientWidth||320;n>720&&(n=720);
+             t.style.fontSize=n/d+"px"
+         };
+         e.addEventListener&&(n.addEventListener(o,a,!1),e.addEventListener("DOMContentLoaded",a,!1))
+}(window);
+
+  </script>
 </head>
 
 <body>
