--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>智能印章管理流程</title>
+  <title>智能印章产品体验页面</title>
   <script>
     !function(n){
     var  e=n.document,
